--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -102,7 +102,7 @@
 
 
 
-@media only screen and (max-width: 980px) {
+@media #{$tablet_l} {
   .header_mobile {
     display: block;
   }
@@ -118,7 +118,7 @@
   }
 }
 
-@media only screen and (max-width: 500px) {
+@media #{$tablet_s} {
   .header_bars {
     width: 40px;
   }
@@ -132,7 +132,7 @@
   }
 }
 
-@media only screen and (max-width: 380px) {
+@media #{$mobile} {
   .header_bars {
     width: 24px;
 
