--- a/src/styles/ui-kit.scss
+++ b/src/styles/ui-kit.scss
@@ -92,14 +92,28 @@ body  {
       }
     }
 
-
-
     .v-select__selection {
       margin: 0 0 0 18px;
       position: absolute;
 
       @media #{$mobile} {
         font-size: 10px;
+      }
+    }
+
+    .v-autocomplete__content{
+      @media #{$mobile} {
+        .v-select-list {
+          .v-list-item {
+            min-height: auto;
+
+            .v-list-item__content {
+              .v-list-item__title {
+                font-size: 10px;
+              }
+            }
+          }
+        }
       }
     }
 
@@ -675,18 +689,106 @@ body  {
       margin-top: 0;
       padding-top: 0;
 
+      .v-label--active {
+        color: $c_text_dark !important;
+        transform: translate(60px,0);
+        opacity: 0;
+      }
+
+      .v-input__control {
+        .v-input__slot {
+          margin-bottom: 10px;
+
+          .v-input__append-inner {
+            //display: none;
+          }
+        }
+
+        .v-text-field__details {
+          display: flex;
+          flex-direction: row-reverse;
+          min-height: auto;
+
+          .v-messages {
+            flex-grow: 1;
+            height: auto;
+            min-height: auto;
+            padding: 0 0 0 20px;
+
+            .v-messages__message {
+              height: auto;
+              text-align: right;
+              font-size: 16px;
+              font-style: italic;
+              line-height: 16px;
+              padding: 0 2px 0 0;
+
+              @media #{$mobile} {
+                font-size: 10px;
+              }
+            }
+          }
+
+          .v-counter {
+            font-size: 16px;
+          }
+        }
+      }
+
+      .v-input__prepend-outer {
+        position: relative;
+        margin-top: 18px;
+      }
+
       .v-input__slot {
         padding: 0;
 
         fieldset {
+          border: none;
+
           legend {
             display: none;
           }
         }
 
-        .v-text-field__slot {}
+        input {
+          border: none;
+          color: $c_text_dark;
+          padding: 24px 18px 18px;
+          max-height: 60px;
+        }
+
+        textarea {
+          border: 1px solid $c_input_border;
+          border-radius: 4px;
+          color: $c_text_dark;
+          font-size: 16px;
+          font-style: italic;
+          line-height: 1.4;
+          padding: 28px 28px 48px;
+        }
+
+        .v-text-field__slot {
+          border: 1px solid $c_input_border;
+          border-radius: 6px;
+
+          .v-text-field__prefix {
+            color: $c_text_dark;
+            font-size: 17px;
+            padding: 20px 0 15px 6px;
+            position: relative;
+            left: 10px;
+          }
+        }
 
         .v-select__slot {
+          border: 1px solid $c_input_border;
+          border-radius: 6px;
+
+          .v-select__slot {
+            border: none;
+          }
+
           .v-input__append-inner {
             position: absolute;
             right: 17px;
@@ -724,57 +826,6 @@ body  {
         &:before {
           display: none;
         }
-
-        input {
-          color: $c_text_dark;
-          padding: 24px 18px 18px;
-          max-height: 60px;
-        }
-
-        textarea {
-          border: 1px solid $c_input_border;
-          border-radius: 4px;
-          color: $c_text_dark;
-          font-size: 16px;
-          font-style: italic;
-          line-height: 1.4;
-          padding: 28px 28px 48px;
-        }
-      }
-
-      .v-input__control {
-        .v-input__slot {
-          margin-bottom: 10px;
-        }
-
-        .v-text-field__details {
-          display: block;
-          min-height: auto;
-
-          .v-messages {
-            height: auto;
-            min-height: auto;
-
-            .v-messages__message {
-              height: auto;
-              text-align: right;
-              font-size: 16px;
-              font-style: italic;
-              line-height: 16px;
-              padding: 0 2px 0 0;
-
-              @media #{$mobile} {
-                font-size: 10px;
-              }
-            }
-          }
-        }
-      }
-
-      .v-label--active {
-        color: $c_text_dark !important;
-        transform: translate(60px,0);
-        opacity: 0;
       }
 
       @media #{$mobile} {
@@ -786,12 +837,37 @@ body  {
           .v-input__slot {
             margin-bottom: 4px;
           }
+
+          .v-text-field__details {
+            .v-counter {
+              font-size: 10px;
+            }
+          }
+        }
+
+        .v-input__prepend-outer {
+          margin-top: 8px;
+          margin-right: 4px;
+
+          .v-input__icon--prepend {
+            font-size: 18px;
+          }
         }
 
         .v-input__slot {
           input {
             font-size: 10px;
             padding: 9px 13px 6px;
+          }
+
+          .v-text-field__slot {
+            .v-text-field__prefix {
+              color: $c_text_dark;
+              font-size: 10px;
+              padding: 11px 0 9px 6px;
+              position: relative;
+              left: 10px;
+            }
           }
         }
       }
