--- a/src/styles/popups.scss
+++ b/src/styles/popups.scss
@@ -278,11 +278,17 @@
 
 .popup_title {
   color: $c_primary;
-  display: block;
+  display: inline-block;
   font-size: 20px;
   font-weight: 600;
   margin: 0 0 12px;
-  width: 100%;
+  position: relative;
+
+  .tooltip_sign {
+    position: absolute;
+    top: 0;
+    right: -30px;
+  }
 
   @media #{$mobile} {
     font-size: 12px;
@@ -314,24 +320,24 @@
   max-height: 90%;
   max-width: 1095px;
   overflow: auto;
-  padding: 88px 104px;
+  padding: 88px 104px 0;
   width: 100%;
 
   @media #{$desktop} {
-    padding: 88px 58px;
+    padding: 88px 58px 0;
   }
 
   @media #{$tablet_l} {
-    padding: 60px 68px;
+    padding: 60px 68px 0;
     max-width: 557px;
   }
 
   @media #{$tablet_m} {
-    padding: 60px 30px;
+    padding: 60px 30px 0;
   }
 
   @media #{$mobile} {
-    padding: 30px;
+    padding: 30px 30px 0;
   }
 }
 
@@ -349,7 +355,7 @@
 }
 
 .popup_two_columns__one {
-  margin: 0 auto;
+  margin: 0 auto 40px;
   max-width: 420px;
   width: 100%;
 }
